# ProblemSpotter

./: .coverage  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze_problems.py  coverage.xml  fetch_problems.py  pyproject.toml  requirements.md  requirements.txt  run_pipeline.py  setup.cfg  setup.cfg-e
.github/workflows/: ci.yml
data/: reddit_how_do_i_results_20250407_185440.json  reddit_how_do_i_results_20250407_185839.json
problem_spotter/: __init__.py  __main__.py
problem_spotter/core/: analyze_problems.py  fetch_problems.py  run_pipeline.py
reddit_data/analyzed/: analyzed_20250404_113459.json
reddit_data/raw/: reddit_how_do_i_results_20250404_113459.json
scripts/: compare_environments.py  verify_ci.sh
tests/: conftest.py  test_analyze_problems.py  test_fetch_problems.py  test_integration.py  test_main.py  test_reddit_query.py  test_run_pipeline.py
typings/dotenv/: __init__.pyi
typings/openai/: __init__.pyi
typings/praw/: __init__.pyi
typings/pydantic/: __init__.pyi
