[project]
name = "problemspotter"
version = "1.0.0"
description = "A tool for fetching Reddit posts containing 'how do I' phrases"
authors = [{name = "ProblemSpotter Team"}]
requires-python = ">=3.13"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportPrivateUsage = "warning"
reportImplicitStringConcatenation = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportConstantRedefinition = true
reportUnnecessaryTypeIgnoreComment = true
reportIncompleteStub = true
exclude = ["tests"]

# Define specific settings for libraries we use but don't have type stubs
pythonVersion = "3.12"
pythonPlatform = "Darwin"

# External packages that don't have type stubs
stubPath = "./typings"
# typeshedPath = "./typeshed"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "E402"]
"typings/**/*.pyi" = ["F401"]  # Allow unused imports in stub files

[tool.ruff.lint.isort]
known-first-party = ["fetch_problems"]
